# simple-reverb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Resources/: Avenir.cpp  Avenir.h  AvenirNextMedium.cpp  AvenirNextMedium.h  CMakeLists.txt  FreezeIcon.h  FuturaMedium.cpp  FuturaMedium.h
Source/: CMakeLists.txt  CustomLookAndFeel.cpp  CustomLookAndFeel.h  EditorContent.cpp  EditorContent.h  NameLabel.h  ParamIDs.h  ParamNames.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotarySlider.cpp  RotarySlider.h  SimpleReverbEditor.cpp  SimpleReverbEditor.h  SimpleReverbProcessor.cpp  SimpleReverbProcessor.h
Source/Components/: CMakeLists.txt  NameLabel.h  RotarySlider.cpp  RotarySlider.h
Source/GUI/: CMakeLists.txt  Dial.cpp  Dial.h  DialTextBox.cpp  DialTextBox.h  EditorLnf.cpp  EditorLnf.h  FreezeButton.cpp  FreezeButton.h  FreezeIcon.h  FuturaMedium.cpp  FuturaMedium.h  MyColours.h  MyLookAndFeel.cpp  MyLookAndFeel.h  NameLabel.cpp  NameLabel.h  RotarySlider.cpp  RotarySlider.h
Source/LookAndFeel/: CMakeLists.txt  CustomLookAndFeel.cpp  CustomLookAndFeel.h  MyColours.h
src/: EditorContent.cpp  EditorContent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleReverbEditor.cpp  SimpleReverbEditor.h  SimpleReverbProcessor.cpp  SimpleReverbProcessor.h
src/ui/: Dial.cpp  Dial.h  EditorContent.cpp  EditorContent.h  EditorLnf.cpp  EditorLnf.h  FreezeButton.cpp  FreezeButton.h  FuturaMedium.h  MyColours.h
